<resources>
    <string name="app_name">Rehber</string>
    <string name="yen_k_ekle">YENİ KİŞİ EKLE</string>
    <string name="rehber">Rehber</string>
    <string name="kullan_c_ad">Kullanıcı Adı</string>
    <string name="parola">Parola</string>
    <string name="giri_yap">Giriş Yap</string>
    <string name="kay_t_ol">Kayıt Ol</string>
    <string name="rehbere_ho_geldiniz">Rehbere Hoş Geldiniz</string>
    <string name="kisiAdet">"Rehberde Kayıtlı Kişi Sayısı: "</string>
    <string name="kayitTarihi">Sisteme Kayıt Tarihi:</string>
    <string name="hesaptan_k_yap">Hesaptan Çıkış Yap</string>
</resources>