<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/Background">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rehbere_ho_geldiniz"
        android:layout_gravity="center"
        android:textSize="55sp"
        android:gravity="center"
        android:textColor="@color/butonYaziRenkleri"
        android:background="@color/BackgroundSecond"
        android:layout_marginBottom="55dp"/>
    <EditText
        android:id="@+id/editKullaniciAd"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/kullan_c_ad"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/editKullaniciSifre"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/parola"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textPassword"/>
    <Button
        android:layout_marginTop="5dp"
        android:id="@+id/girisYapButton"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/giri_yap"
        android:layout_gravity="center"
        android:backgroundTint="@color/GirisYapButton"/>
    <Button
        android:layout_marginTop="5dp"
        android:id="@+id/KayitOlButton"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/kay_t_ol"
        android:layout_gravity="center"
        android:backgroundTint="@color/KayitOlButton"/>
</LinearLayout>